Tests added and modifications made